<resources>
    <string name="app_name">Shopping List</string>
    <string name="unknown_name">Unknown</string>
    <string name="last_update">Last update: %1$s</string>
    <string name="menu_import_list">Import list</string>
    <string name="menu_share">Share</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_settings">Settings</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="action_import_list">Import list</string>
    <string name="activity_main_no_category">No category</string>
    <string name="row_shopping_list_header_total_price">Total price:</string>
    <string name="activity_add_edit_item_add_new_item">Add new item</string>
    <string name="activity_add_edit_item_edit_item">Edit item</string>
    <string name="activity_add_edit_item_name_hint">Name</string>
    <string name="activity_add_edit_item_quantity_hint">Quantity</string>
    <string name="activity_add_edit_item_note_hint">Note</string>
    <string name="activity_add_edit_item_price_hint">Price</string>
    <string name="activity_add_edit_item_icon_description">Item icon</string>
    <string name="activity_add_edit_item_fab_description">Save</string>
    <string name="activity_add_edit_item_no_category">No category</string>
    <string name="activity_add_edit_item_category_error">No category name</string>
    <string name="activity_add_edit_list_add_new_list">Create list</string>
    <string name="activity_add_edit_list_edit_list">Edit list</string>
    <string name="activity_add_edit_list_name_hint">Name</string>
    <string name="activity_add_edit_list_note_hint">Description</string>
    <string name="activity_add_edit_list_category_deleted">You have removed a category</string>
    <string name="activity_add_edit_list_undo">Undo</string>
    <string name="activity_add_edit_list_add_category">Add category</string>
    <string name="activity_list_users_title">List\'s users</string>
    <string name="activity_list_users_header_owner">Owner</string>
    <string name="activity_list_users_header_users">Users</string>
    <string name="activity_list_users_header_banned">Banned</string>
    <string name="activity_select_icon_header">Select icon</string>
    <string name="activity_settings_header">Settings</string>
    <string name="activity_settings_dark_theme">Dark theme</string>
    <string name="activity_settings_personalized_ads">Personalized ads</string>
    <string name="activity_settings_lists_sort_type_text">Sort lists by</string>
    <string name="activity_settings_items_sort_type_text">Sort items by</string>
    <string name="activity_settings_auto_set_icons_text">Set icons automatically</string>
    <string name="activity_settings_show_timestamp_text">Show time of update</string>
    <string name="sort_type_newest_first">Newest to oldest</string>
    <string name="sort_type_alphabetically">Alphabetically</string>
    <string name="auto_set_icons_always">Always</string>
    <string name="auto_set_icons_never">Never</string>
    <string name="auto_set_icons_when_new">When creating new</string>
    <string name="show_timestamp_always">Always</string>
    <string name="show_timestamp_never">Never</string>
    <string name="show_timestamp_when_synced">On synchronized lists</string>
    <string name="message_list_is_empty">The list is empty</string>
    <string name="message_there_are_no_lists">You don\'t have any lists</string>
    <string name="message_list_edit_no_ownership">You can only edit lists of which you are the owner</string>
    <string name="message_need_internet_to_modify_list">You have to be online to modify synchronized lists</string>
    <string name="message_no_internet_connection">You don\'t have an Internet connection</string>
    <string name="message_no_list_id_in_clipboard">You don\'t have any list id in the clipboard</string>
    <string name="message_list_does_not_exist">That list does not exist, make sure you copied the right id</string>
    <string name="message_list_url_error">That list does not exist, make sure the link is correct</string>
    <string name="message_not_logged_in">You have to log in first</string>
    <string name="message_error">Unexpected error occurred</string>
    <string name="message_username_too_short">Username must be al least three characters long</string>
    <string name="message_item_must_have_name">You must enter the name of the item</string>
    <string name="message_list_must_have_name">You must enter the name of the list</string>
    <string name="message_category_name_too_short">Category name must be al least three characters long</string>
    <string name="message_list_already_downloaded">That list is already downloaded</string>
    <string name="message_share_list">Share list</string>
    <string name="dialog_item_options_delete">Delete</string>
    <string name="dialog_shopping_list_options_delete">Delete</string>
    <string name="dialog_shopping_list_options_upload">Upload</string>
    <string name="dialog_shopping_list_options_create_copy">Create copy</string>
    <string name="dialog_shopping_list_options_create_local_copy">Create local copy</string>
    <string name="dialog_user_options_give_ownership">Give ownership</string>
    <string name="dialog_user_options_ban">Ban</string>
    <string name="dialog_user_options_unban">Unban</string>
    <string name="dialog_options_default_header">Options</string>
    <string name="dialog_profile_settings_header">Account settings</string>
    <string name="dialog_profile_settings_save">Save</string>
    <string name="dialog_profile_settings_username">Username</string>
    <string name="dialog_add_category_header">Add category</string>
    <string name="dialog_add_category_header_edit">Edit category</string>
    <string name="dialog_add_category_name_hint">Category</string>
    <string name="dialog_add_category_save">Save</string>
    <string name="dialog_ask_consent_header">Can we continue to use your data to tailor ads for you?</string>
    <string name="dialog_ask_consent_info">You can change your choice anytime in the settings. Our partners will collect data and use a unique identifier on your device to show you ads. Learn more how we and our partners collect and use data.</string>
    <string name="dialog_ask_consent_yes">Yes, continue to see relevant ads</string>
    <string name="dialog_ask_consent_no">No, see ads that are less relevant</string>
    <string name="dialog_import_list_header">Add list</string>
    <string name="dialog_import_list_cancel">Cancel</string>
    <string name="dialog_import_list_save">Add</string>
    <string name="dialog_category_expansion_options_expand_other">Expand other</string>
    <string name="dialog_category_expansion_options_collapse_other">Collapse other</string>
    <string name="dialog_category_expansion_options_expand_above">Expand above</string>
    <string name="dialog_category_expansion_options_collapse_above">Collapse above</string>
    <string name="dialog_category_expansion_options_expand_below">Expand below</string>
    <string name="dialog_category_expansion_options_collapse_below">Collapse below</string>
    <plurals name="unit_no_unit">
        <item quantity="other">Quantity: %1$d</item>
    </plurals>
    <plurals name="unit_piece">
        <item quantity="one">%1$d piece</item>
        <item quantity="other">%1$d pieces</item>
    </plurals>
    <plurals name="unit_box">
        <item quantity="one">%1$d box</item>
        <item quantity="other">%1$d boxes</item>
    </plurals>
    <plurals name="unit_bottle">
        <item quantity="one">%1$d bottle</item>
        <item quantity="other">%1$d bottles</item>
    </plurals>
    <plurals name="unit_jar">
        <item quantity="one">%1$d jar</item>
        <item quantity="other">%1$d jars</item>
    </plurals>
    <plurals name="unit_can">
        <item quantity="one">%1$d can</item>
        <item quantity="other">%1$d cans</item>
    </plurals>
    <plurals name="unit_pack">
        <item quantity="one">%1$d pack</item>
        <item quantity="other">%1$d packs</item>
    </plurals>
    <plurals name="unit_kilogram">
        <item quantity="one">%1$d kilogram</item>
        <item quantity="other">%1$d kilograms</item>
    </plurals>
    <plurals name="unit_decagram">
        <item quantity="one">%1$d decagram</item>
        <item quantity="other">%1$d decagrams</item>
    </plurals>
    <plurals name="unit_gram">
        <item quantity="one">%1$d gram</item>
        <item quantity="other">%1$d grams</item>
    </plurals>
    <plurals name="unit_liter">
        <item quantity="one">%1$d liter</item>
        <item quantity="other">%1$d liters</item>
    </plurals>
    <plurals name="unit_milliliter">
        <item quantity="one">%1$d milliliter</item>
        <item quantity="other">%1$d milliliters</item>
    </plurals>
    <string-array name="apple_keywords">
        <item>apple</item>
    </string-array>
    <string-array name="banana_keywords">
        <item>banana</item>
    </string-array>
    <string-array name="cherry_keywords">
        <item>cherry</item>
        <item>cherries</item>
    </string-array>
    <string-array name="lemon_keywords">
        <item>lemon</item>
    </string-array>
    <string-array name="orange_keywords">
        <item>orange</item>
    </string-array>
    <string-array name="pear_keywords">
        <item>pear</item>
    </string-array>
    <string-array name="pineapple_keywords">
        <item>pineapple</item>
    </string-array>
    <string-array name="plum_keywords">
        <item>plum</item>
    </string-array>
    <string-array name="strawberry_keywords">
        <item>strawberry</item>
        <item>strawberries</item>
    </string-array>
    <string-array name="grapes_keywords">
        <item>grape</item>
    </string-array>
    <string-array name="watermelon_keywords">
        <item>watermelon</item>
    </string-array>
    <string-array name="raspberry_keywords">
        <item>raspberry</item>
        <item>raspberries</item>
    </string-array>
    <string-array name="peach_keywords">
        <item>peach</item>
    </string-array>
    <string-array name="walnut_keywords">
        <item>walnut</item>
    </string-array>
    <string-array name="blackberry_keywords">
        <item>blackberry</item>
        <item>blackberries</item>
    </string-array>
    <string-array name="asparagus_keywords">
        <item>asparagus</item>
    </string-array>
    <string-array name="aubergine_keywords">
        <item>aubergine</item>
        <item>eggplant</item>
    </string-array>
    <string-array name="avocado_keywords">
        <item>avocado</item>
    </string-array>
    <string-array name="beans_keywords">
        <item>bean</item>
    </string-array>
    <string-array name="beetroot_keywords">
        <item>beetroot</item>
    </string-array>
    <string-array name="broccoli_keywords">
        <item>broccoli</item>
    </string-array>
    <string-array name="cabbage_keywords">
        <item>cabbage</item>
    </string-array>
    <string-array name="carrot_keywords">
        <item>carrot</item>
    </string-array>
    <string-array name="cauliflower_keywords">
        <item>cauliflower</item>
    </string-array>
    <string-array name="chili_pepper_keywords">
        <item>chili</item>
        <item>pepper</item>
    </string-array>
    <string-array name="corn_keywords">
        <item>corn</item>
        <item>maize</item>
    </string-array>
    <string-array name="garlic_keywords">
        <item>garlic</item>
    </string-array>
    <string-array name="green_beans_keywords">
        <item>green</item>
        <item>bean</item>
    </string-array>
    <string-array name="green_pepper_keywords">
        <item>green</item>
        <item>pepper</item>
    </string-array>
    <string-array name="lettuce_keywords">
        <item>lettuce</item>
    </string-array>
</resources>