<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/dialog_profile_settings_header_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dialog_options_header_margin_start"
        android:layout_marginEnd="@dimen/dialog_options_header_margin_start"
        android:layout_marginTop="@dimen/dialog_options_header_margin_top"
        android:layout_marginBottom="@dimen/dialog_options_header_margin_bottom"
        android:text="@string/dialog_profile_settings_header"
        android:textSize="@dimen/dialog_options_item_text_size"
        android:textColor="?android:attr/textColorPrimary"
        android:maxLines="1"
        android:ellipsize="end"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:hint="@string/dialog_profile_settings_username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialog_profile_settings_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text|textCapWords"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_profile_settings_save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/dialog_profile_settings_save"
        app:icon="@drawable/ic_done_24"/>
</LinearLayout>