<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_user_options_header_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dialog_options_header_margin_start"
        android:layout_marginTop="@dimen/dialog_options_header_margin_top"
        android:layout_marginBottom="@dimen/dialog_options_header_margin_bottom"
        android:text="@string/dialog_options_default_header"
        android:textSize="@dimen/dialog_options_item_text_size"
        android:textColor="?android:attr/textColorPrimary" />

    <LinearLayout
        android:id="@+id/dialog_user_options_give_ownership"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:layout_width="@dimen/dialog_options_item_icon_size"
            android:layout_height="@dimen/dialog_options_item_icon_size"
            android:layout_marginStart="@dimen/dialog_options_item_horizontal_padding"
            android:src="@drawable/ic_give_ownership_24"
            android:tintMode="multiply"
            android:tint="?android:attr/textColorSecondary"/>

        <TextView
            android:id="@+id/dialog_user_options_give_ownership_text"
            android:text="@string/dialog_user_options_give_ownership"
            android:textSize="@dimen/dialog_options_item_text_size"
            android:textColor="?android:attr/textColorPrimary"
            android:paddingBottom="@dimen/dialog_options_item_vertical_padding"
            android:paddingTop="@dimen/dialog_options_item_vertical_padding"
            android:paddingStart="@dimen/dialog_options_item_horizontal_padding"
            android:paddingEnd="@dimen/dialog_options_item_horizontal_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialog_user_options_ban"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:layout_width="@dimen/dialog_options_item_icon_size"
            android:layout_height="@dimen/dialog_options_item_icon_size"
            android:layout_marginStart="@dimen/dialog_options_item_horizontal_padding"
            android:src="@drawable/ic_ban_24"
            android:tintMode="multiply"
            android:tint="?android:attr/textColorSecondary"/>

        <TextView
            android:id="@+id/dialog_user_options_ban_text"
            android:text="@string/dialog_user_options_ban"
            android:textSize="@dimen/dialog_options_item_text_size"
            android:textColor="?android:attr/textColorPrimary"
            android:paddingBottom="@dimen/dialog_options_item_vertical_padding"
            android:paddingTop="@dimen/dialog_options_item_vertical_padding"
            android:paddingStart="@dimen/dialog_options_item_horizontal_padding"
            android:paddingEnd="@dimen/dialog_options_item_horizontal_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dialog_user_options_unban"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:clickable="true"
        android:focusable="true">

        <ImageView
            android:layout_width="@dimen/dialog_options_item_icon_size"
            android:layout_height="@dimen/dialog_options_item_icon_size"
            android:layout_marginStart="@dimen/dialog_options_item_horizontal_padding"
            android:src="@drawable/ic_unban_24"
            android:tintMode="multiply"
            android:tint="?android:attr/textColorSecondary"/>

        <TextView
            android:id="@+id/dialog_user_options_unban_text"
            android:text="@string/dialog_user_options_unban"
            android:textSize="@dimen/dialog_options_item_text_size"
            android:textColor="?android:attr/textColorPrimary"
            android:paddingBottom="@dimen/dialog_options_item_vertical_padding"
            android:paddingTop="@dimen/dialog_options_item_vertical_padding"
            android:paddingStart="@dimen/dialog_options_item_horizontal_padding"
            android:paddingEnd="@dimen/dialog_options_item_horizontal_padding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>