<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/dialog_import_list_header"
        android:text="@string/dialog_import_list_header"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="@dimen/dialog_options_item_text_size"
        android:maxLines="1"
        android:ellipsize="end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <ProgressBar
        android:id="@+id/dialog_import_list_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true" />

    <RelativeLayout
        android:id="@+id/dialog_import_list_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_import_list_header"
        android:layout_marginTop="16dp"
        android:visibility="invisible">

        <ImageView
            android:id="@+id/dialog_import_list_icon"
            android:src="@drawable/ic_list_default_64"
            android:scaleType="fitStart"
            android:layout_width="32dp"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@id/dialog_import_list_name"
            android:layout_alignBottom="@id/dialog_import_list_name"
            android:layout_marginStart="8dp"/>

        <TextView
            android:id="@+id/dialog_import_list_name"
            android:text="Name"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="18sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@id/dialog_import_list_icon"
            android:layout_toStartOf="@id/dialog_import_list_owner_icon"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <ImageView
            android:id="@+id/dialog_import_list_owner_icon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignTop="@id/dialog_import_list_name"
            android:layout_alignBottom="@id/dialog_import_list_name"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/dialog_import_list_note"
            android:text="Note"
            android:textColor="?android:attr/textColorSecondary"
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_import_list_name"
            android:layout_alignStart="@id/dialog_import_list_icon"
            android:layout_alignEnd="@id/dialog_import_list_owner_icon"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/dialog_import_list_note"
            android:layout_marginBottom="16dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dialog_import_list_cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="8dp"
                android:text="@string/dialog_import_list_cancel"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/dialog_import_list_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="8dp"
                android:text="@string/dialog_import_list_save"/>

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>